--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .container {
   position: relative;
-  padding-top: 74px;
+  padding-top: 65px;
  
 }
 #hero h1 {
@@ -818,4 +818,20 @@ section {
   text-align: center;
   font-size: 13px;
   color: #fff;
+}
+.error{
+  color: #af4242;
+  background-color: #fde8ec;
+  padding: 10px;
+  display: none;
+  font-size: 14px;
+  border-radius: 4px;
+}
+.success{
+  color: #457c51;
+  background-color: #d4edda;
+  padding: 10px;
+  display: none;
+  font-size: 14px;
+  border-radius: 4px;
 }
