--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -835,3 +835,9 @@ section {
   font-size: 14px;
   border-radius: 4px;
 }
+.error-form{
+  color: red;
+  padding: 5px;
+  display: none;
+  font-size: 14px;
+}
